--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -3,12 +3,13 @@
   justify-content: flex-end;
   flex-basis: 35vw;
   height: 100%;
-  border-right: 1px solid #b1c0c5;
+  border-right: 1px solid rgb(56, 68, 77);
 
   &__wrapper {
     flex-basis: 35%;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     margin-top: 1.2rem;
     margin-right: 1.5rem;
 
@@ -20,7 +21,7 @@
         list-style: none;
         padding: 0 1.1rem;
         .navbar__item {
-          padding: 0.9rem 0.6rem;
+          padding: 0.8rem 0.6rem;
           margin-bottom: 2px;
 
           &:hover {
@@ -78,11 +79,59 @@
 
         .navbar__button {
           margin-top: 2rem;
+        }
+      }
+    }
 
-          &:hover {
-            
+    .navbar__profile {
+      padding: .7rem 1.6rem;
+      margin-bottom: .5rem;
+      transition: all .2s;
+      &-wrapper {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+      }
 
+      &:hover {
+        background-color: #162d40;
+        border-top-right-radius: 45px;
+        border-top-left-radius: 45px;
+        border-bottom-right-radius: 45px;
+        border-bottom-left-radius: 45px;
+        cursor: pointer;
+      }
+
+      &-left {
+        display: flex;
+        color: #fff;
+
+        .navbar__profile-pic {
+          height: 40px;
+          width: 40px;
+          border-radius: 50%;
+        }
+
+        .navbar__profile-username {
+          display: flex;
+          flex-direction: column;
+          margin-left: 0.5rem;
+
+          .navbar__profile-username-l1 {
+            font-size: 15px;
+            font-weight: 700;
           }
+          .navbar__profile-username-l2 {
+            font-size: 15px;
+            font-weight: 400;
+            color: #8899a6;
+          }
+        }
+      }
+
+      &-right {
+        .nav__profile-dots {
+          cursor: pointer;
         }
       }
     }
