--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: flex-end;
   flex-basis: 35vw;
+  flex-shrink: 0;
   height: 100%;
   border-right: 1px solid rgb(56, 68, 77);
 
