--- a/src/components/Main.scss
+++ b/src/components/Main.scss
@@ -2,6 +2,7 @@
   flex-basis: 25vw;
   border-right: 1px solid rgb(56, 68, 77);
   display: flex;
+ flex-shrink: 0;
 
   &__column {
     width: 100%;
@@ -11,13 +12,12 @@
 
 
     .main__homepage {
-      min-height: 4.5vh;
+      min-height: 50px;
       display: flex;
       align-items: center;
       justify-content: space-between;
       padding: 0 1rem;
       border-bottom: 1px solid rgb(56, 68, 77);
-      flex-shrink: 0;
       
 
       .main__homepage-text {
