--- a/src/components/ProfileTweet.scss
+++ b/src/components/ProfileTweet.scss
@@ -1,6 +1,6 @@
 .profile-tweet {
   padding: 0.3rem 0.7rem;
-  min-height: 10vh;
+  min-height: 120px;
   border-bottom: 1px solid rgb(56, 68, 77);
   flex-shrink: 0;
 
@@ -24,6 +24,7 @@
       display: flex;
       flex-direction: column;
       justify-content: center;
+      width: 100%;
 
       .profile-tweet__tweet {
         &-input {
