--- a/src/components/ProfileTweet.scss
+++ b/src/components/ProfileTweet.scss
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+
 .profile-tweet {
   padding: 0.3rem 0.7rem;
   min-height: 120px;
@@ -27,13 +29,17 @@
       width: 100%;
 
       .profile-tweet__tweet {
-        &-input {
+        &-area {
           background: transparent;
           color: #fff;
+          width: 100%;
+          font-family: "Roboto", sans-serif;
           font-size: 20px;
           outline: none;
           border: none;
-          padding: 0.5rem 0;
+          padding-top: 1rem;
+          resize: none;
+          overflow-y: hidden;
 
           &::placeholder {
             color: #788895;
@@ -45,7 +51,7 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
-        margin-top: 0.5rem;
+
         &-list {
           display: flex;
           padding: 0;
