--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -3,6 +3,7 @@
   justify-content: flex-end;
   flex-basis: 34vw;
   flex-shrink: 0;
+  position: sticky;
   height: 100%;
   border-right: 1px solid rgb(56, 68, 77);
 
