--- a/src/components/ProfileTweet.scss
+++ b/src/components/ProfileTweet.scss
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
 .profile-tweet {
-  padding: 0.3rem 0.7rem;
+  padding: 0 0.7rem;
   min-height: 120px;
   border-bottom: 1px solid rgb(56, 68, 77);
   flex-shrink: 0;
