--- a/src/components/Tweet.scss
+++ b/src/components/Tweet.scss
@@ -1,11 +1,13 @@
 .tweet {
+    transition: all .2s;
+  &:hover {
+    background-color: #192734;
+    cursor: pointer;
+  }
   &__wrapper {
     display: flex;
     padding: 0.8rem 1rem;
     border-bottom: 1px solid rgb(56, 68, 77);
-
-    .tweet__img {
-    }
 
     .tweet__profile {
       display: flex;
@@ -16,6 +18,7 @@
       .tweet__owner-info {
         display: flex;
         justify-content: space-between;
+        margin-bottom: .1rem;
 
         .tweet__owner-name-content {
           display: flex;
@@ -52,8 +55,46 @@
           padding-left: 0;
           padding-right: 5.5rem;
           margin-bottom: 0;
+          margin-top: .5rem;
+          cursor: pointer;
+          &-item {
+            padding: 0.4rem 0.4rem 0.2rem 0.4rem;
+            &:hover:nth-of-type(1) {
+              background-color: #1b95e0;
+              opacity: 0.4 !important;
+              border-radius: 50%;
+
+              .tweet__icons-list-item-icon {
+                color: #0469a9 !important;
+              }
+            }
+
+            &:hover:nth-of-type(4) {
+              background-color: #1da1f2;
+              border-radius: 50%;
+
+              .tweet__icons-list-item-icon {
+                color: #0469a9 !important;
+              }
+            }
+
+            &:hover:nth-of-type(2) {
+                background-color: rgb(54, 71, 119);
+                border-radius: 50%;
+  
+                .tweet__icons-list-item-icon {
+                  color: rgb(92, 192, 137) !important;
+                }
+              }
+
+
+
+
+          }
         }
       }
     }
   }
 }
+
+/* rgb(23, 191, 99)*/
