Refactor background and font color of tweet box icons

--- a/src/components/Tweet.scss
+++ b/src/components/Tweet.scss
@@ -1,5 +1,5 @@
 .tweet {
-    transition: all .2s;
+  transition: all 0.2s;
   &:hover {
     background-color: #192734;
     cursor: pointer;
@@ -18,7 +18,7 @@
       .tweet__owner-info {
         display: flex;
         justify-content: space-between;
-        margin-bottom: .1rem;
+        margin-bottom: 0.1rem;
 
         .tweet__owner-name-content {
           display: flex;
@@ -55,41 +55,45 @@
           padding-left: 0;
           padding-right: 5.5rem;
           margin-bottom: 0;
-          margin-top: .5rem;
+          margin-top: 0.5rem;
           cursor: pointer;
           &-item {
             padding: 0.4rem 0.4rem 0.2rem 0.4rem;
             &:hover:nth-of-type(1) {
-              background-color: #1b95e0;
-              opacity: 0.4 !important;
+              background-color: rgba(29, 161, 242, 0.1);
               border-radius: 50%;
 
               .tweet__icons-list-item-icon {
-                color: #0469a9 !important;
-              }
-            }
-
-            &:hover:nth-of-type(4) {
-              background-color: #1da1f2;
-              border-radius: 50%;
-
-              .tweet__icons-list-item-icon {
-                color: #0469a9 !important;
+                color: rgb(59, 159, 224) !important;
               }
             }
 
             &:hover:nth-of-type(2) {
-                background-color: rgb(54, 71, 119);
-                border-radius: 50%;
-  
-                .tweet__icons-list-item-icon {
-                  color: rgb(92, 192, 137) !important;
-                }
+              background-color: rgba(23, 191, 99, 0.094);
+              border-radius: 50%;
+
+              .tweet__icons-list-item-icon {
+                color: rgb(33, 188, 105) !important;
               }
+            }
 
+            &:hover:nth-of-type(3) {
+              background-color: rgba(224, 36, 94, 0.086);
+              border-radius: 50%;
 
+              .tweet__icons-list-item-icon {
+                color: rgb(224, 36, 94) !important;
+              }
+            }
 
+            &:hover:nth-of-type(4) {
+              background-color: rgba(29, 161, 242, 0.1);
+              border-radius: 50%;
 
+              .tweet__icons-list-item-icon {
+                color: rgb(59, 159, 224) !important;
+              }
+            }
           }
         }
       }
