--- a/src/components/Tweet.scss
+++ b/src/components/Tweet.scss
@@ -59,12 +59,15 @@
           cursor: pointer;
           &-item {
             padding: 0.4rem 0.4rem 0.2rem 0.4rem;
+            &-icon{
+              height: 19px;
+            }
             &:hover:nth-of-type(1) {
               background-color: rgba(29, 161, 242, 0.1);
               border-radius: 50%;
 
               .tweet__icons-list-item-icon {
-                color: rgb(59, 159, 224) !important;
+                fill: rgb(59, 159, 224) ;
               }
             }
 
@@ -73,7 +76,7 @@
               border-radius: 50%;
 
               .tweet__icons-list-item-icon {
-                color: rgb(33, 188, 105) !important;
+                fill: rgb(33, 188, 105) ;
               }
             }
 
@@ -82,7 +85,7 @@
               border-radius: 50%;
 
               .tweet__icons-list-item-icon {
-                color: rgb(224, 36, 94) !important;
+                fill: rgb(224, 36, 94) ;
               }
             }
 
@@ -91,7 +94,7 @@
               border-radius: 50%;
 
               .tweet__icons-list-item-icon {
-                color: rgb(59, 159, 224) !important;
+                fill: rgb(59, 159, 224) ;
               }
             }
           }
