--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -1,4 +1,4 @@
-.banner {
+.navbar {
   display: flex;
   justify-content: flex-end;
   flex-basis: 34vw;
@@ -15,11 +15,32 @@
     margin-top: 1.2rem;
     margin-right: 1.5rem;
 
-    .banner__navigation {
-      .banner__logo {
+    .navbar__navigation {
+      .navbar__logo {
         margin-left: 3rem;
         cursor: pointer;
       }
+
+      .navbar__tweet-button {
+        background-color: rgb(29, 161, 242);
+        width: 225px;
+        display: flex;
+        justify-content: center;
+        border-radius: 4rem;
+        padding: 1rem 0.3rem;
+        margin-left: 1rem;
+        cursor: pointer;
+
+        &:hover{
+          background-color: rgb(26, 145, 218);
+        }
+        &-inner {
+          color: #fff;
+          font-size: 15px;
+          font-weight: 700;
+        }
+      }
+
       .navbar__items {
         list-style: none;
         padding: 0 1.1rem;
@@ -44,7 +65,6 @@
             fill: #1b7bb8;
           }
 
-          
           &-link {
             color: #fff;
             display: flex;
