--- a/src/components/ProfileTweet.scss
+++ b/src/components/ProfileTweet.scss
@@ -41,8 +41,11 @@
           padding-left: .5rem;
           resize: none;
           overflow-y: hidden;
-         
 
+          &::placeholder{
+            color: rgb(136, 153, 166) ;
+          }
+         
         }
       }
 
